trying to fix vertical scroll on mobile

--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ html,
 body {
 	overscroll-behavior-y: contain;
 	background-color: black;
+
+	overflow: hidden;
+	position: fixed;
 }
 
 @font-face {
